# TCP_Server_Client

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: main.cpp.082455E1034EF26C.idx  main.cpp.E45B618792387BA0.idx
Client/: CMakeLists.txt
Client/src/: main.cpp
Server/: CMakeLists.txt
Server/src/: TcpServer.hpp  main.cpp
docs/: README-ru.md
